/*
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";

import "SerializableDecomposedQueryPlan.proto";
import "google/protobuf/any.proto";

package NES;

/*
The serializable wrapper definition for query plan
 */
message SerializableReconfigurationMarker {
    map<uint64, SerializableReconfigurationMarkerEvent> reconfigurationMarkerEvents = 1;
}

message SerializableReconfigurationMarkerEvent {
    SerializableQueryState queryState = 1;
    SerializableReconfigurationMetadata reconfigurationMetadata = 2;
}

message SerializableReconfigurationMetadata {

    message SerializableDrainQueryMetadata {
        uint32 numberOfSources = 1;
    }

    message SerializableUpdateAndDrainMetadata {
        uint64 workerId = 1;
        uint64 sharedQueryId = 2;
        uint64 decomposedQueryId = 3;
        uint64 decomposedQueryPlanVersion = 4;
        uint32 numberOfSources = 5;
    }

    message SerializableUpdateQueryMetadata {
        uint64 workerId = 1;
        uint64 sharedQueryId = 2;
        uint64 decomposedQueryId = 3;
        uint64 decomposedQueryPlanVersion = 4;
    }

    google.protobuf.Any details = 1;
}